--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<li>ラーメン塩爺<li>
 		<li>ラーメンムギュ</li>
 		<li>らぁ麺きむら</li>
+		<li>星知ラズ金閣寺店</li>
     <li>キラメキノトリ
     <li>××ラーメン</li>
 	</ul>
@@ -45,6 +46,7 @@
 		<li>山猫軒</li>
 		<li>きぬカフェ</li>
 		<li>cafe Steps</li>
+		<li>音楽喫茶ムジーク</li>
     <li>タリーズコーヒー</li>
 	</ul>
   	<h3>カレー</h3>
