--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li>芥川</li>
 		<li>あくた川</li>
 		<li>◇◇ラーメン</li>
-		<li>××ラーメン<li>
+		<li>×××ラーメン<li>
 		<li>ラーメン塩爺<li>
 		<li>ラーメンムギュ</li>
 		<li>らぁ麺きむら</li>
